third_party/llvm-project/clang/test/Lexer/minimize_source_to_dependency_directives_at_import_extra_tokens.m
// RUN: %clang_cc1 -verify -print-dependency-directives-minimized-source %s 2>&1

@import x; a // expected-error {{unexpected extra tokens at end of @import declaration}}
